Objeto filho implementado

--- a/pagina.html
+++ b/pagina.html
@@ -14,6 +14,18 @@
                 this.notaDois = notaDois;
             }
         }
+
+        class Aluno {
+            constructor(nome, notaUm, notaDois) {
+                this.nome = nome;
+                this.notaUm = notaUm;
+                this.notaDois = notaDois;
+            }
+        }
+
+        const aluno1 = new Aluno('Jean', 8, 9);
+            console.log(aluno1);
+
     </script>
 </body>
 </html>
